[Mac] Fix Toolbar glimpse during fullscreen transition

BUG=618594, 615810

Review-Url: https://codereview.chromium.org/2078733002
Cr-Commit-Position: refs/heads/master@{#400450}

Former-commit-id: 04542485cce24e64e794c1dfd47d97fa5fbdf20c